--- a/CooperativaXZ.csproj
+++ b/CooperativaXZ.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Login\" />
+  </ItemGroup>
+
 </Project>
