--- a/CooperativaXZ.csproj
+++ b/CooperativaXZ.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -8,13 +8,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+  </ItemGroup>
 
   
 
-  <ItemGroup>
-      <PackageReference Include="HtmlSanitizer" Version="5.0.218-beta" />
-      <PackageReference Include="Markdig" Version="0.17.1" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-  </ItemGroup>
+
 
 </Project>
